Layout issues (Issue #691)

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
@@ -1395,14 +1395,14 @@ input:disabled.imixs-date   {
 
 .dashboard-card-footer   {
   flex-basis: 100%;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   font-weight: normal;
   color: #5f5f5f;
   line-height: 2em;
 }
 .dashboard-card-link   {
   float: right;
-  font-size: 18px;
+  font-size: 1.2rem;
   margin-left: 20px;
 }
 .dashboard-card.lead {
